--- a/index.html
+++ b/index.html
@@ -233,9 +233,10 @@
         <div class="footer-container">
             <p>&copy; 2025 Jai Vignesh Ravichandran | All rights reserved</p>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a>
-                <a href="https://github.com/your-github-profile" target="_blank">GitHub</a>
-                <a href="mailto:example@mail.com">Email</a>
+                <a href="https://www.linkedin.com/in/jai-vignesh-ravichandran-5a79421b8/" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/jai-vignesh" target="_blank">GitHub</a>
+                    <a href="mailto:ravichandran.ja@northeastern.edu">Email Me</a>
+               
             </div>
         </div>
     </footer>
